--- a/FootballFan/LiveScoreStoryboard.storyboard
+++ b/FootballFan/LiveScoreStoryboard.storyboard
@@ -1116,7 +1116,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DWz-Yg-MaM">
-                                                            <rect key="frame" x="34" y="0.0" width="195" height="40"/>
+                                                            <rect key="frame" x="54" y="0.0" width="175" height="40"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="40" id="3XL-XI-PR1"/>
                                                             </constraints>
@@ -1126,7 +1126,7 @@
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RSG-zJ-8xP" userLabel="line9">
-                                                            <rect key="frame" x="30" y="0.0" width="1" height="40"/>
+                                                            <rect key="frame" x="50" y="0.0" width="1" height="40"/>
                                                             <color key="backgroundColor" red="0.58431372550000005" green="0.58039215690000001" blue="0.58039215690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="1" id="mEH-Qb-hUh"/>
@@ -1135,12 +1135,12 @@
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkY-H7-vrm">
-                                                            <rect key="frame" x="5" y="11" width="20" height="18"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wkY-H7-vrm">
+                                                            <rect key="frame" x="5" y="11.666666666666664" width="40" height="17"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="width" constant="20" id="01z-Nh-Lfl"/>
+                                                                <constraint firstAttribute="width" constant="40" id="01z-Nh-Lfl"/>
                                                             </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="76Z-vG-3Q3">
@@ -12036,6 +12036,9 @@
                                                                 <state key="normal" title="See All">
                                                                     <color key="titleColor" red="0.57647058819999997" green="0.57647058819999997" blue="0.57647058819999997" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="seeAllMatchesAction:" destination="p3V-kE-hgu" eventType="touchUpInside" id="Tqg-ko-csa"/>
+                                                                </connections>
                                                             </button>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vlF-3u-dzY">
                                                                 <rect key="frame" x="5" y="166" width="349" height="30"/>
@@ -12708,6 +12711,9 @@
                                                                 <state key="normal" title="See All">
                                                                     <color key="titleColor" red="0.57647058819999997" green="0.57647058819999997" blue="0.57647058819999997" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="seeAllFixtureStats:" destination="p3V-kE-hgu" eventType="touchUpInside" id="PhC-ry-zeo"/>
+                                                                </connections>
                                                             </button>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A7I-Vu-bfN" userLabel="line4">
                                                                 <rect key="frame" x="0.0" y="468" width="414" height="1"/>
@@ -13001,6 +13007,9 @@
                                                                 <state key="normal" title="See All">
                                                                     <color key="titleColor" red="0.57647058819999997" green="0.57647058819999997" blue="0.57647058819999997" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                                                 </state>
+                                                                <connections>
+                                                                    <action selector="seeAllTeamStatsAction:" destination="p3V-kE-hgu" eventType="touchUpInside" id="sNU-3D-egG"/>
+                                                                </connections>
                                                             </button>
                                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26s-Xw-iAp" userLabel="line7">
                                                                 <rect key="frame" x="0.0" y="750" width="414" height="1"/>
